<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>HexdumpWidget</class>
 <widget class="QDockWidget" name="HexdumpWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>959</width>
    <height>807</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string notr="true">Hexdump</string>
  </property>
  <widget class="QWidget" name="dockWidgetContents">
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="spacing">
     <number>0</number>
    </property>
    <property name="rightMargin">
     <number>0</number>
    </property>
    <item>
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <widget class="HexWidget" name="hexTextView">
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
       </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
      </widget>
      <widget class="QTabWidget" name="hexSideTab_2">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="tabPosition">
        <enum>QTabWidget::North</enum>
       </property>
       <property name="currentIndex">
        <number>1</number>
       </property>
       <property name="usesScrollButtons">
        <bool>true</bool>
       </property>
       <property name="documentMode">
        <bool>false</bool>
       </property>
       <widget class="QWidget" name="tabDIsasm_2">
        <attribute name="title">
         <string>Parsing</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_23">
         <property name="spacing">
          <number>6</number>
         </property>
         <property name="leftMargin">
          <number>0</number>
         </property>
         <property name="topMargin">
          <number>0</number>
         </property>
         <property name="rightMargin">
          <number>0</number>
         </property>
         <property name="bottomMargin">
          <number>0</number>
         </property>
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_16">
           <property name="spacing">
            <number>5</number>
           </property>
           <property name="rightMargin">
            <number>0</number>
           </property>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_17">
             <property name="topMargin">
              <number>0</number>
             </property>
             <item>
              <widget class="QComboBox" name="parseTypeComboBox">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
               <property name="currentText">
                <string>Disassembly</string>
               </property>
               <item>
                <property name="text">
                 <string>Disassembly</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>String</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>Assembler</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>C bytes</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>C half-words (2 byte)</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>C words (4 byte)</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>C dwords (8 byte)</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>Python</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>JSON</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>JavaScript</string>
                </property>
               </item>
              </widget>
             </item>
             <item>
              <widget class="QLabel" name="label_6">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
               <property name="text">
                <string>Endian</string>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QComboBox" name="parseEndianComboBox">
               <property name="sizeAdjustPolicy">
                <enum>QComboBox::AdjustToMinimumContentsLength</enum>
               </property>
               <item>
                <property name="text">
                 <string>Little</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>Big</string>
                </property>
               </item>
              </widget>
             </item>
            </layout>
           </item>
           <item>
            <widget class="QFrame" name="hexSideFrame_2">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="minimumSize">
              <size>
               <width>0</width>
               <height>0</height>
              </size>
             </property>
             <property name="frameShape">
              <enum>QFrame::NoFrame</enum>
             </property>
             <property name="frameShadow">
              <enum>QFrame::Plain</enum>
             </property>
             <property name="lineWidth">
              <number>0</number>
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_21">
              <property name="sizeConstraint">
               <enum>QLayout::SetMinimumSize</enum>
              </property>
              <property name="leftMargin">
               <number>5</number>
              </property>
              <property name="topMargin">
               <number>0</number>
              </property>
              <property name="rightMargin">
               <number>5</number>
              </property>
              <property name="bottomMargin">
               <number>5</number>
              </property>
              <item>
               <widget class="QLabel" name="hexArchLabel_2">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
                <property name="text">
                 <string>Arch</string>
                </property>
               </widget>
              </item>
              <item>
               <widget class="QComboBox" name="parseArchComboBox">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
                <property name="sizeAdjustPolicy">
                 <enum>QComboBox::AdjustToMinimumContentsLength</enum>
                </property>
                <property name="frame">
                 <bool>false</bool>
                </property>
               </widget>
              </item>
              <item>
               <widget class="QLabel" name="hexBitsLabel_2">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
                <property name="text">
                 <string>Bits</string>
                </property>
               </widget>
              </item>
              <item>
               <widget class="QComboBox" name="parseBitsComboBox">
                <property name="sizeAdjustPolicy">
                 <enum>QComboBox::AdjustToMinimumContentsLength</enum>
                </property>
                <item>
                 <property name="text">
                  <string>16</string>
                 </property>
                </item>
                <item>
                 <property name="text">
                  <string>32</string>
                 </property>
                </item>
                <item>
                 <property name="text">
                  <string>64</string>
                 </property>
                </item>
               </widget>
              </item>
             </layout>
            </widget>
           </item>
           <item>
            <widget class="QPlainTextEdit" name="hexDisasTextEdit">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="font">
              <font>
               <family>Anonymous Pro</family>
               <pointsize>13</pointsize>
              </font>
             </property>
             <property name="frameShape">
              <enum>QFrame::NoFrame</enum>
             </property>
             <property name="lineWidth">
              <number>0</number>
             </property>
             <property name="plainText">
              <string/>
             </property>
            </widget>
           </item>
          </layout>
         </item>
        </layout>
       </widget>
       <widget class="QWidget" name="tabHistogram_2">
        <attribute name="title">
         <string notr="true">Information</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_25">
         <property name="spacing">
          <number>6</number>
         </property>
         <property name="leftMargin">
          <number>0</number>
         </property>
         <property name="topMargin">
          <number>0</number>
         </property>
         <property name="rightMargin">
          <number>0</number>
         </property>
         <property name="bottomMargin">
          <number>0</number>
         </property>
         <item>
          <layout class="QFormLayout" name="formLayout_2">
           <property name="fieldGrowthPolicy">
            <enum>QFormLayout::ExpandingFieldsGrow</enum>
           </property>
           <property name="labelAlignment">
            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
           </property>
           <property name="formAlignment">
            <set>Qt::AlignHCenter|Qt::AlignTop</set>
           </property>
           <property name="horizontalSpacing">
            <number>5</number>
           </property>
           <property name="verticalSpacing">
            <number>6</number>
           </property>
           <property name="leftMargin">
            <number>5</number>
           </property>
           <property name="rightMargin">
            <number>5</number>
           </property>
           <item row="1" column="0">
            <widget class="QLabel" name="label_8">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="text">
              <string>MD5:</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
            <layout class="QHBoxLayout" name="horizontalLayout_8">
             <property name="spacing">
              <number>5</number>
             </property>
             <item>
              <widget class="QLineEdit" name="bytesMD5">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
               <property name="frame">
                <bool>false</bool>
               </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QToolButton" name="copyMD5">
               <property name="toolTip">
                <string notr="true">Copy MD5</string>
               </property>
               <property name="text">
                <string notr="true"/>
               </property>
              </widget>
             </item>
            </layout>
           </item>
           <item row="2" column="0">
            <widget class="QLabel" name="label_9">
             <property name="text">
              <string>SHA1:</string>
             </property>
            </widget>
           </item>
           <item row="2" column="1">
            <layout class="QHBoxLayout" name="horizontalLayout_9">
             <property name="spacing">
              <number>5</number>
             </property>
             <item>
              <widget class="QLineEdit" name="bytesSHA1">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
               <property name="frame">
                <bool>false</bool>
               </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QToolButton" name="copySHA1">
               <property name="toolTip">
                <string notr="true">Copy SHA1</string>
               </property>
               <property name="text">
                <string notr="true"/>
               </property>
              </widget>
             </item>
            </layout>
           </item>
           <item row="3" column="0">
            <widget class="QLabel" name="label_10">
             <property name="text">
              <string>Entropy:</string>
             </property>
            </widget>
           </item>
           <item row="3" column="1">
            <widget class="QLineEdit" name="bytesEntropy">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="frame">
              <bool>false</bool>
             </property>
             <property name="readOnly">
              <bool>true</bool>
             </property>
            </widget>
           </item>
          </layout>
         </item>
        </layout>
       </widget>
      </widget>
     </widget>
    </item>
    <item>
     <widget class="QToolButton" name="openSideViewB">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="maximumSize">
       <size>
        <width>24</width>
        <height>16777215</height>
       </size>
      </property>
      <property name="styleSheet">
       <string notr="true"/>
      </property>
      <property name="text">
       <string notr="true"/>
      </property>
      <property name="icon">
       <iconset resource="../resources.qrc">
        <normaloff>:/img/icons/previous.svg</normaloff>:/img/icons/previous.svg</iconset>
      </property>
      <property name="iconSize">
       <size>
        <width>16</width>
        <height>12</height>
       </size>
      </property>
      <property name="autoRaise">
       <bool>true</bool>
      </property>
      <property name="arrowType">
       <enum>Qt::NoArrow</enum>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <action name="actionHideHexdump_side_panel">
   <property name="text">
    <string>Hexdump side panel</string>
   </property>
   <property name="toolTip">
    <string>Hexdump side panel</string>
   </property>
  </action>
  <action name="actionFunctionsUndefine">
   <property name="text">
    <string>Undefine</string>
   </property>
   <property name="toolTip">
    <string>Undefine</string>
   </property>
  </action>
  <action name="actionDisasCopy_All">
   <property name="text">
    <string>Copy all</string>
   </property>
   <property name="toolTip">
    <string>Copy all</string>
   </property>
  </action>
  <action name="actionDisasCopy_Bytes">
   <property name="text">
    <string>Copy bytes</string>
   </property>
   <property name="toolTip">
    <string>Copy bytes</string>
   </property>
  </action>
  <action name="actionDisasCopy_Disasm">
   <property name="text">
    <string>Copy disasm</string>
   </property>
   <property name="toolTip">
    <string>Copy disasm</string>
   </property>
  </action>
  <action name="actionHexCopy_Hexpair">
   <property name="text">
    <string>Copy Hexpair</string>
   </property>
   <property name="toolTip">
    <string>Copy Hexpair</string>
   </property>
  </action>
  <action name="actionHexCopy_ASCII">
   <property name="text">
    <string>Copy ASCII</string>
   </property>
   <property name="toolTip">
    <string>Copy ASCII</string>
   </property>
  </action>
  <action name="actionHexCopy_Text">
   <property name="text">
    <string>Copy Text</string>
   </property>
   <property name="toolTip">
    <string>Copy Text</string>
   </property>
  </action>
  <action name="actionHexEdit">
   <property name="text">
    <string>Edit</string>
   </property>
   <property name="toolTip">
    <string>Edit</string>
   </property>
  </action>
  <action name="actionHexPaste">
   <property name="text">
    <string>Paste</string>
   </property>
   <property name="toolTip">
    <string>Paste</string>
   </property>
  </action>
  <action name="actionHexInsert_Hex">
   <property name="text">
    <string>Insert Hex</string>
   </property>
   <property name="toolTip">
    <string>Insert Hex</string>
   </property>
  </action>
  <action name="actionHexInsert_String">
   <property name="text">
    <string>Insert String</string>
   </property>
   <property name="toolTip">
    <string>Insert String</string>
   </property>
  </action>
  <action name="actionFormatHex">
   <property name="text">
    <string>Hex</string>
   </property>
  </action>
  <action name="actionFormatOctal">
   <property name="text">
    <string>Octal</string>
   </property>
  </action>
  <action name="actionFormatHalfWord">
   <property name="text">
    <string>Half-word</string>
   </property>
  </action>
  <action name="actionFormatWord">
   <property name="text">
    <string>Word</string>
   </property>
  </action>
  <action name="actionFormatQuadWord">
   <property name="text">
    <string>Quad-word</string>
   </property>
  </action>
  <action name="actionFormatEmoji">
   <property name="text">
    <string>Emoji</string>
   </property>
  </action>
  <action name="actionFormatSignedInt1">
   <property name="text">
    <string>1 byte</string>
   </property>
   <property name="toolTip">
    <string>1 byte</string>
   </property>
  </action>
  <action name="actionFormatSignedInt2">
   <property name="text">
    <string>2 bytes</string>
   </property>
   <property name="toolTip">
    <string>2 bytes</string>
   </property>
  </action>
  <action name="actionFormatSignedInt4">
   <property name="text">
    <string>4 bytes</string>
   </property>
   <property name="toolTip">
    <string>4 bytes</string>
   </property>
  </action>
 </widget>
 <customwidgets>
  <customwidget>
   <class>HexWidget</class>
   <extends>QScrollArea</extends>
   <header>HexWidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../resources.qrc"/>
 </resources>
 <connections/>
</ui>
